# yaff

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICES  README.md  conanfile.py
.github/workflows/: ci.yaml  ci.yml
benchmarks/: CMakeLists.txt
benchmarks/access/: CMakeLists.txt  flat.cpp  hierarchical.cpp
benchmarks/access/flatbuffers/: flat.fbs  hierarchical.fbs
benchmarks/access/protoyaff/: flat.proto  hierarchical.proto
benchmarks/space/: CMakeLists.txt  flat.cpp
benchmarks/space/flatbuffers/: flat.fbs
benchmarks/space/protoyaff/: flat.proto
cmake/: Sanitizers.cmake  YaFFConfig.cmake.in  YaFFGenerate.cmake  YaFFProtocPluginTarget.cmake  YaffConfig.cmake.in  yaff-generate.cmake
docs/: index.md  integration.md  quick_start.md  versioning.md
docs/benchmarks/: access.md  overview.md  space.md
docs/reference/cpp/: generated.md  support.md  untrusted.md
docs/schema/: evolution.md  layouts.md  limits.md  overview.md
examples/: CMakeLists.txt  README.md
examples/doc_views/: CMakeLists.txt  main.cpp
examples/doc_views/proto/: document.proto
examples/feed_api/: CMakeLists.txt  main.cpp
examples/feed_api/proto/: feed.proto
examples/trading/: CMakeLists.txt  main.cpp
examples/trading/proto/: order.proto
include/: CMakeLists.txt
include/yaff/: any_array.h  any_message.h  any_table.h  any_vector.h  array.h  base.h  buffer.h  builder.h  message.h  reflect.h  serializer.h  table.h  util.h  vector.h  version.h.in  visitor.h  yaff.h
include/yaff/proto/: CMakeLists.txt  options.proto
integration_example/: README.md
integration_example/cmake/: CMakeLists.txt
integration_example/conan/: CMakeLists.txt  conanfile.py
plans/: integration-guide.md
src/compilation/: CMakeLists.txt  compiler.cpp  compiler.h  cpp_gen.cpp  cpp_gen.h  error.cpp  error.h  ir.cpp  ir.h  ir_compat.cpp  ir_compat.h  ir_processor.cpp  ir_processor.h  ir_reflect.cpp  ir_reflect.h  proto_front.cpp  proto_front.h  util.cpp  util.h
src/protoc-plugin/: CMakeLists.txt  main.cpp  protoc_plugin.cpp  protoc_plugin.h
test/: common.cpp  flat_table.cpp  proto_api.cpp
test/protoyaff/: proto_api.proto  tables2.proto
test_package/: CMakeLists.txt  conanfile.py
test_package/proto/: smoke.proto
test_package/src/: main.cpp
tests/: CMakeLists.txt  any_message.cpp  common.cpp  fixed_message.cpp  fixed_table.cpp  flat_message.cpp  proto_api.cpp  sparse_message.cpp  sparse_table.cpp
tests/protoyaff/: proto2.proto  proto3.proto  proto_api.proto  tables3.proto
